--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="faq">FAQ</string>
     <string name="profile">Profile</string>
     <string name="add_ge">Add GE</string>
+    <string name="title_activity_navheader">navheader</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
